Add basic window abstraction.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,6 @@
-file(GLOB FILES *.cxx *.hpp)
+list(APPEND SRC
+        ICoreWindow.hpp
+        main.cxx
+        GLFWWindow.hpp GLFWWindow.cpp)
 
-target_sources(OpenGLPractice PUBLIC ${FILES})
+target_sources(OpenGLPractice PUBLIC ${SRC})
