OpenGL Shader abstraction class
Also added test shaders to draw a triangle.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 list(APPEND SRC
         ICoreWindow.hpp
         main.cxx
-        GLFWWindow.hpp GLFWWindow.cpp)
+        GLFWWindow.hpp GLFWWindow.cpp
+        GLShader.hpp GLShader.cpp)
 
 target_sources(OpenGLPractice PUBLIC ${SRC})
