Hide OpenGL deprecation messages.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ target_link_libraries(OpenGLPractice ${OPENGL_LIBRARIES})
 target_link_libraries(OpenGLPractice glfw)
 target_link_libraries(OpenGLPractice glm::glm)
 target_link_libraries(OpenGLPractice ${LIBRARY_OPENGL})
+target_compile_definitions(OpenGLPractice PRIVATE GL_SILENCE_DEPRECATION=1)
