Add GameLoop abstraction with delta timer
GameLoop is an abstract class with a single predefined function called "run" which uses all other functions to init, update, render, and shutdown the game.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,8 @@ list(APPEND SRC
         Core/GL/GLFWWindow.hpp
         Core/GL/GLShader.cpp
         Core/GL/GLShader.hpp
-        Core/Interface/ICoreWindow.hpp)
+        Core/Interface/ICoreWindow.hpp
+        Core/GameLoop.cpp
+        Core/GameLoop.hpp)
 
 target_sources(OpenGLPractice PUBLIC ${SRC})
