Implement GameLoop class in NanoGame to organize engine elements.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,9 @@ list(APPEND SRC
         Core/GL/GLShader.hpp
         Core/Interface/ICoreWindow.hpp
         Core/GameLoop.cpp
-        Core/GameLoop.hpp)
+        Core/GameLoop.hpp
+
+        Game/NanoGame.cpp
+        Game/NanoGame.hpp)
 
 target_sources(OpenGLPractice PUBLIC ${SRC})
