Create basic input handler.
InputHandler is not implemented.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,8 @@ list(APPEND SRC
         engine/core/Shader.hpp
         engine/core/GameLoop.cpp
         engine/core/GameLoop.hpp
+        engine/core/InputHandler.cpp
+        engine/core/InputHandler.hpp
 
         Game/NanoGame.cpp
         Game/NanoGame.hpp)
